syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customers {

	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);

	// Here are streaming out customers
	rpc GetNewCustomer (NewCustomerRequest) returns (stream CustomerModel);;
}

message NewCustomerRequest{

}

message CustomerLookupModel {
	int32 userId = 1;
}

message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}